fixed modification attempt of unmutated list